  in gdisk and cgdisk) from 3 to 2, since some descriptions are long enough
  that they're ambiguous with three columns.

- Makefile change: Add $(LDLIBS) support to enable clean static builds (for
  libintl).

- You can now put the 0xEE partition last in a hybrid MBR using sgdisk.
  (Previously, this was possible with gdisk but not with sgdisk.) See the
  sgdisk man page for details.

1.0.4 (7/5/2018):
-----------------

- Added some explicit copy constructors and made some other tweaks to avoid
  compiler warnings.

- The macOS binary for sgdisk is now a pure 64-bit build; I'm no longer
  supporting 32-bit builds of sgdisk. The gdisk and cgdisk binaries remain
  "fat" 32-/64-bit builds. The reason for dropping the 32-bit support from
  sgdisk is that I've re-built my macOS development system, and I had
  trouble building a "fat" binary with the fresh install of the popt
  libraries upon which sgdisk relies. 32-bit support for the other binaries
  is now officially deprecated, too.

- Added search feature to partition type list functions ("L" on main menu of
  gdisk and "L" when entered in response to the "Hex code or GUID" prompt in
  gdisk and sgdisk). This feature filters the partition type list to those
  which include the search term in their GPT fdisk descriptions. For
  instance, typing "Linux" shows only partitions with "Linux" in their
  descriptions. Note that the search/filter is case-sensitive. If <Enter> is
  pressed, no filter is applied.

- Change to Makefile.mac to use standard libncurses rather than a 3rd-party
  version; should help with cgdisk compatibility.

- Minor bug fix in alignment of internal data structures.

- Minor bug fix in handling of damaged disks. Also, GPT fdisk now reports
  more information on what data structures are damaged when a damaged disk
  is detected.

- Added type code for Apple APFS (7C3457EF-0000-11AA-AA11-00306543ECAC,
  0xaf0a).

- Added type code for Atari TOS basic data (0xa200,